force-app/main/default/objects/Case/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Open</fullName>
                <color>#FFFF66</color>
                <label>0 - Open</label>
            </value>
            <value>
                <fullName>1 - Being Addressed</fullName>
                <color>#33FF33</color>
                <label>1 - Being Addressed</label>
            </value>
            <value>
                <fullName>2 - In Escalation</fullName>
                <color>#FFFF66</color>
                <label>2 - In Escalation</label>
            </value>
            <value>
                <fullName>Waiting on Internal</fullName>
            </value>
            <value>
                <fullName>Waiting on Client</fullName>
            </value>
            <value>
                <fullName>3 - Closed</fullName>
                <color>#33FF33</color>
                <label>3 - Closed</label>
            </value>
            <value>
                <fullName>4 - Past Due</fullName>
                <color>#FF0000</color>
                <label>4 - Past Due</label>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Waiting on Addendum</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Up for Consideration</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>In Deployment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Need More Information - VMM</fullName>
            </value>
            <value>
                <fullName>Need More Information - Manager</fullName>
            </value>
            <value>
                <fullName>QA Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>