force-app/main/default/objects/Case/fields/Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date_Time__c</fullName>
    <description>Inputs the Date and Time when a case status changes from Open to any other status</description>
    <inlineHelpText>Date and Time when a case status changes from Open to any other status</inlineHelpText>
    <label>Status Change Date/Time</label>
    <type>DateTime</type>
</CustomField>