force-app/main/default/objects/Case/fields/Submitted_by_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by_Current_User__c</fullName>
    <formula>IF(Submitted_By__c = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted by Current User</label>
    <type>Checkbox</type>
</CustomField>