force-app/main/default/objects/Case/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description>Ticket # once assigned to the development team</description>
    <inlineHelpText>Ticket # once assigned to the development team</inlineHelpText>
    <label>Ticket #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>