force-app/main/default/objects/Case/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>