force-app/main/default/objects/Case/fields/Total_Action_Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Action_Hours_Completed__c</fullName>
    <description>Total Hours Completed related to the action in Associated Action field on a case.</description>
    <formula>Associated_Action__r.amc__Total_Hours_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Action Hours Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>