force-app/main/default/objects/Case/fields/Total_Action_Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Total_Action_Hours_Scheduled__c</fullName>
    <formula>Associated_Action__r.amc__Total_Hours_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Action Hours Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>