force-app/main/default/objects/Case/fields/Troubleshooting_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Steps_Completed__c</fullName>
    <label>Troubleshooting Steps Completed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>