force-app/main/default/objects/Case/fields/Url_Provided__c.field-meta.xml
<CustomField>
    <fullName>Url_Provided__c</fullName>
    <label>Url Provided</label>
    <type>Url</type>
</CustomField>