force-app/main/default/objects/Case/fields/URLs_Provided_by_Submitter__c.field-meta.xml
<CustomField>
    <fullName>URLs_Provided_by_Submitter__c</fullName>
    <label>URLs Provided by Submitter</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>