force-app/main/default/objects/Case/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fill with who is responsible for resolving the case</description>
    <inlineHelpText>Fill with who is responsible for resolving the case</inlineHelpText>
    <label>Case/Issue Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>