force-app/main/default/objects/Case/fields/Vendor_Time__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Time__c</fullName>
    <label>Time to Complete - Office/Facilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>