force-app/main/default/objects/Case/fields/Website_Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Website_Audit_Type__c</fullName>
    <label>Website Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 Day Audit</fullName>
            </value>
            <value>
                <fullName>Sales Readiness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>