force-app/main/default/objects/Case/fields/Weekly_Target_Case__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Target_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Target Case</label>
    <type>Checkbox</type>
</CustomField>