force-app/main/default/objects/Case/fields/Which_documents_are_being_changed__c.field-meta.xml
<CustomField>
    <fullName>Which_documents_are_being_changed__c</fullName>
    <label>Which documents are being changed:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Description</fullName>
            </value>
            <value>
                <fullName>Compensation Document</fullName>
            </value>
            <value>
                <fullName>Technical Needs</fullName>
            </value>
            <value>
                <fullName>Flex Policy</fullName>
            </value>
            <value>
                <fullName>MAP Goals</fullName>
            </value>
            <value>
                <fullName>A-Player Score</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>