force-app/main/default/objects/Case/fields/Work_Stopping__c.field-meta.xml
<CustomField>
    <fullName>Work_Stopping__c</fullName>
    <description>Is this case work stopping</description>
    <inlineHelpText>Is this issue preventing you from working?</inlineHelpText>
    <label>Work Stopping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>