force-app/main/default/objects/Case/fields/X5_Step_Intro__c.field-meta.xml
<CustomField>
    <fullName>X5_Step_Intro__c</fullName>
    <label>5 - Step Intro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>