force-app/main/default/objects/Case/validationRules/Cannot_Have_Requested_Date_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Have_Requested_Date_in_Past</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Case_Category__c,&apos;A-Player Scorecard&apos;) ,

Assigned_Must_be_Resolved_by_Date__c &lt; DATEVALUE(CreatedDate))</errorConditionFormula>
    <errorMessage>Can&apos;t have a requested date that is before the case was created</errorMessage>
</ValidationRule>