force-app/main/default/objects/Case/validationRules/Case_Guided_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Guided_Submission</fullName>
    <active>true</active>
    <description>Modified by Jessica to exclude cases automatically created from chatter answers</description>
    <errorConditionFormula>Guided_Case_Submission__c = FALSE &amp;&amp; NOT(ISPICKVAL(Origin,&apos;Chatter Answers&apos;))</errorConditionFormula>
    <errorMessage>Your case was not submitted. Please submit case using &quot;New Case Record&quot; button.</errorMessage>
</ValidationRule>