force-app/main/default/objects/Case/validationRules/Dev_Status_is_Ticket_Allocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Dev_Status_is_Ticket_Allocated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Dev_Status__c,&quot;Ticket Allocated&quot;) &amp;&amp; 
OR (
ISBLANK(Ticket__c) ,
ISBLANK(Text(Dev_Team_Allocated__c)),
ISBLANK(Planned_Completion_Date__c)
)</errorConditionFormula>
    <errorMessage>Ticket #, Dev Team Allocated, and Plannted Completion Date must be populated when Dev Status = Ticket Allocated</errorMessage>
</ValidationRule>