force-app/main/default/objects/Case/validationRules/Dev_Status_is_Ticket_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Dev_Status_is_Ticket_Created</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Dev_Status__c,&apos;Ticket Created&apos;) &amp;&amp;
OR (
ISBLANK(Ticket__c) ,
ISBLANK(Text(Dev_Team_Allocated__c))
)</errorConditionFormula>
    <errorMessage>Ticket # and Dev Team Allocated must be populated when Dev Status = Ticket Created</errorMessage>
</ValidationRule>