force-app/main/default/objects/Case/validationRules/Quality_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Quality_Review</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Quality_Reviewed__c),
Quality_Reviewed__c = TRUE,
$User.Id &lt;&gt; &apos;005G0000001qisz&apos;,
$Profile.Id &lt;&gt;&apos;00eA0000000nBcd&apos;,
$Profile.Id&lt;&gt; &apos;00eG0000000FWKC&apos;)</errorConditionFormula>
    <errorMessage>You don&apos;t have the correct permissions to change Quality Reviewed.</errorMessage>
</ValidationRule>