force-app/main/default/objects/Case/listViews/A_Player_Cases.listView-meta.xml
<ListView>
    <fullName>A_Player_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Associated_Action__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Types__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>A-Player Scorecard</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Discovery,Being Addressed,On Hold,Waiting on Internal,Waiting on Client</value>
    </filters>
    <label>A-Player Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>