force-app/main/default/objects/Case/listViews/A_Players.listView-meta.xml
<ListView>
    <fullName>A_Players</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>Submitted_By__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>A-Player Scorecard</value>
    </filters>
    <label>A-Players</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>