force-app/main/default/objects/Case/listViews/Abstrakt_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Abstrakt_Open_Cases</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Associated_Action__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Types__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelled,Declined,Closed,Merged</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Grace Jacquot,Sara Wynn</value>
    </filters>
    <label>Marketing Open Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>