force-app/main/default/objects/Case/listViews/Accounting_Don_Williams.listView-meta.xml
<ListView>
    <fullName>Accounting_Don_Williams</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Department_Responsible_for_Issue__c</field>
        <operation>equals</operation>
        <value>Accounting</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Jessica Vallieres</value>
    </filters>
    <label>Accounting: Jessica Vallieres</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>