force-app/main/default/objects/Case/listViews/Accounting_Jackie_Schutte.listView-meta.xml
<ListView>
    <fullName>Accounting_Jackie_Schutte</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_By__c</field>
        <operation>contains</operation>
        <value>schwepker</value>
    </filters>
    <label>Cases Created by Schwepker</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>