force-app/main/default/objects/Case/listViews/Accounting_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Accounting_Open_Cases</fullName>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>Department_Responsible_for_Issue__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Types__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>