force-app/main/default/objects/Case/listViews/Accounting_Projects.listView-meta.xml
<ListView>
    <fullName>Accounting_Projects</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Responsible_for_Issue__c</field>
        <operation>equals</operation>
        <value>Accounting</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>startsWith</operation>
        <value>Project:</value>
    </filters>
    <label>Accounting Projects</label>
</ListView>