force-app/main/default/objects/Case/listViews/Adison_Huelskamp_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Adison_Huelskamp_Closed_Cases</fullName>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Business_Days_to_Resolve_Case__c</columns>
    <columns>Business_Hours_to_Address_Case__c</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Adison Huelskamp</value>
    </filters>
    <label>Adison Huelskamp - Closed Cases</label>
</ListView>