force-app/main/default/objects/Case/listViews/Adison_Huelskamp_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Adison_Huelskamp_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Case_Aging_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Adison Huelskamp</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Email Blast</value>
    </filters>
    <label>Adison Huelskamp - Open Cases</label>
    <sharedTo>
        <role>Data_Analyst</role>
    </sharedTo>
</ListView>