force-app/main/default/objects/Case/listViews/Alex_Knudsen_s_Open_cases.listView-meta.xml
<ListView>
    <fullName>Alex_Knudsen_s_Open_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Alex Knudsen</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Sapper Offboarding</value>
    </filters>
    <label>Alex Knudsen&apos;s Open cases</label>
</ListView>