force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assigned_Must_be_Resolved_by_Date__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Submitted_By__c</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>3/10/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>lessThan</operation>
        <value>3/28/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Submitted_By__c</field>
        <operation>contains</operation>
        <value>Kristopher</value>
    </filters>
    <label>All Closed Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>