force-app/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Category__c</columns>
    <columns>Case_Types__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open,In Discovery,Being Addressed,On Hold,Waiting on Internal,Waiting on Client</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>